<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/which_features"
        android:textColor="@color/main"
        android:textSize="36sp" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="289dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="201dp"
        android:scaleX='1.2'
        android:scaleY='1.2'
        android:text="@string/confidence_featuresb1"
        android:textColor="@color/main"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="283dp"
        android:gravity="center_horizontal|left|center_vertical"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/confidence_featuresb2"
        android:textColor="@color/main"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="139dp"
        android:gravity="left|center_vertical"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/confidence_featuresb3"
        android:textColor="@color/main"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/custom_button"
        android:text="@string/submit_btn"
        android:textColor="@color/accent"
        android:textSize="30sp" />
</RelativeLayout>